--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
                 <nav class="menu-nav">
                     <ul>
                         <li>
-                            <a href="#">Sobre</a>
+                            <a href="#sobre">Sobre</a>
                         </li>
                         <li>
-                            <a href="#">Produtos</a>
+                            <a href="#produtos">Produtos</a>
                         </li>
                         <li>
-                            <a href="#">Portfólio</a>
+                            <a href="#portfolio">Portfólio</a>
                         </li>
                         <li>
-                            <a href="#">Contato</a>
+                            <a href="#contato">Contato</a>
                         </li>
                     </ul>
                 </nav>
@@ -35,7 +35,7 @@
             <p>Direto das fazendas de Minas Gerais</p>
         </main>
 
-        <section class="sobre">
+        <section class="sobre" id="sobre"> 
             <h2>Uma mistura de</h2>
             <div class="sobre-container">
                 <div class="sobre-item">
@@ -53,7 +53,7 @@
 
         </section>
 
-        <section class="produtos">
+        <section class="produtos" id="produtos">
             <div class="produtos-container">
                 <div class="produtos-item">
                     <h2 class="produtos-paulista">Paulista</h2>
@@ -71,7 +71,7 @@
             <a class="produtos-btn" href="#">Saiba mais</a>
         </section>
 
-        <section class="locais">
+        <section class="locais" id="portfolio">
             <div class="locais-item">
                 <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
                 <div>
@@ -98,7 +98,7 @@
             </div>
         </section>
 
-        <section class="assine">
+        <section class="assine" id="contato">
             <div class="assine-container">
                 <div class="assine-info">
                     <h2>Assine a nossa Newsletter</h2>
@@ -115,7 +115,7 @@
         <footer class="footer">
             <div class="footer-container">
                 <p>
-                    Este é um projeto da Origamid. Mais em origamid.com Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro
+                    Herllon Cardoso - Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro
                 </p>
                 <img src="img/brafe.png" alt="Brafe">
             </div>
